--- a/KimNinehundred/Sooltudy/app/src/main/res/layout/activity_main.xml
+++ b/KimNinehundred/Sooltudy/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,8 @@
     android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    tools:context=".MainActivity">
 
 
 
@@ -20,4 +21,12 @@
         android:id="@+id/imageView" />
         >
     </LinearLayout>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Button"
+        android:id="@+id/btn"
+        android:layout_gravity="center_horizontal" />
+
 </LinearLayout>
