--- a/KimNinehundred/Sooltudy/app/src/main/res/layout/activity_main.xml
+++ b/KimNinehundred/Sooltudy/app/src/main/res/layout/activity_main.xml
@@ -4,8 +4,7 @@
     android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context=".MainActivity">
+    android:paddingBottom="@dimen/activity_vertical_margin">
 
 
 
@@ -28,5 +27,12 @@
         android:text="Button"
         android:id="@+id/btn"
         android:layout_gravity="center_horizontal" />
+    <Button
+        android:id="@+id/btnToWrite"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="일기장으로 가자"
+        android:layout_gravity="center"
+        />
 
 </LinearLayout>
